# equium-master

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  GUIDE.md  LICENSE  README.md  equium-miner.service  install.ps1  install.sh  package.json
.github/workflows/: desktop-build.yml
clients/desktop-miner/src/: App.tsx
clients/desktop-miner/src-tauri/: Cargo.toml
clients/desktop-miner/src-tauri/src/: keystore.rs  state.rs
clients/desktop-miner/src/components/: MineDashboard.tsx  SendModal.tsx  SettingsModal.tsx  TopBar.tsx
clients/web-miner/: README.md
clients/web-miner/app/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
clients/web-miner/app/src/: App.tsx  idl.json  main.tsx  miner.ts  program.ts  solver.worker.ts  styles.css  vite-env.d.ts
clients/web-miner/wasm/: Cargo.toml
clients/web-miner/wasm/src/: lib.rs
clients/website/: .gitignore  next.config.ts  package-lock.json  package.json
clients/website/public/wasm/: equium_wasm.d.ts  equium_wasm.js  miner.worker.js
clients/website/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
clients/website/src/app/api/rpc/: route.ts
clients/website/src/app/api/state/: route.ts
clients/website/src/app/docs/: page.tsx
clients/website/src/app/docs/getting-started/: page.tsx
clients/website/src/app/docs/protocol/: page.tsx
clients/website/src/app/docs/rpc/: page.tsx
clients/website/src/app/docs/tokenomics/: page.tsx
clients/website/src/app/download/: page.tsx
clients/website/src/app/explorer/: opengraph-image.tsx  page.tsx
clients/website/src/app/mine/: opengraph-image.tsx  page.tsx
clients/website/src/components/: Faq.tsx  Footer.tsx  HashrateChart.tsx  Hero.tsx  HowItWorks.tsx  LiveStats.tsx  MineClient.tsx  MineClientLoader.tsx  MinePlaceholder.tsx  MiningPreview.tsx  Navbar.tsx  ShareCardModal.tsx  Tokenomics.tsx
clients/website/src/components/docs/: DocsLayout.tsx  DocsPrimitives.tsx  MintCard.tsx
clients/website/src/components/wallet/: SendModal.tsx  UnlockScreen.tsx  WalletMenu.tsx
clients/website/src/lib/: constants.ts  rpc.ts  wallet-crypto.ts
crates/equihash-core/: Cargo.toml
crates/equihash-core/examples/: gen_bench_solution.rs  solve_block.rs
crates/equihash-core/src/: challenge.rs  lib.rs  solver.rs  target.rs  verify.rs
programs/equium/: Cargo.toml
programs/equium/src/: errors.rs  round.rs  schedule.rs  state.rs
programs/equium/src/instructions/: advance_empty_round.rs  fund_vault.rs  initialize.rs  mine.rs  renounce_admin.rs  set_target.rs
scripts/: deploy-devnet.sh  init-localnet.ts  seed-target.ts
scripts/verify-bench/: Anchor.toml  README.md  package.json
scripts/verify-bench/programs/verify-bench/: Cargo.toml
scripts/verify-bench/programs/verify-bench/src/: lib.rs
scripts/verify-bench/tests/: bench-solution.json  verify-bench.ts
tests/: equium.ts
