[package]
name = "equium"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Equium ($EQM) — on-chain CPU mining program for Solana"

[lib]
crate-type = ["cdylib", "lib"]
name = "equium"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
equihash-core = { path = "../../crates/equihash-core", default-features = false }
sha2 = { workspace = true }
