[package]
name = "equium-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM-bindgen wrapper around equihash-core's solver for the browser miner"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
equihash-core = { path = "../../../crates/equihash-core", features = ["solver"] }
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
